--- a/Capio/app/src/main/res/values/strings.xml
+++ b/Capio/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Capio</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sample_show_log">Show Log</string>
+    <string name="sample_hide_log">Hide Log</string>
 </resources>
