--- a/Capio/app/src/main/res/values/strings.xml
+++ b/Capio/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sample_show_log">Show Log</string>
     <string name="sample_hide_log">Hide Log</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
