--- a/Capio/app/src/main/res/values/strings.xml
+++ b/Capio/app/src/main/res/values/strings.xml
@@ -2,9 +2,12 @@
     <string name="app_name">Capio</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="facebook_app_id">430369483977615</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sample_show_log">Show Log</string>
     <string name="sample_hide_log">Hide Log</string>
+    <string name="cancel_login">Login cancelled.</string>
+    <string name="fail_login">Login failed.</string>
 </resources>
